--- a/school-directory.html
+++ b/school-directory.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.o$
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>The Beginning of Another Website</title>
+    <title>School Directory</title>
     <style type="text/css" media="screen">
   * {
     margin: 0px 0px 0px 0px;
@@ -12,7 +12,7 @@
   body, html {
     padding: 3px 3px 3px 3px;
 
-    background-color: #D8DBE2;
+    background-color: ##FBFAF5;
 
     font-family: Verdana, sans-serif;
     font-size: 11pt;
@@ -20,7 +20,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>The Beginning of Another Website</title>
+    <title>School Directory</title>
     <style type="text/css" media="screen">
   * {
     margin: 0px 0px 0px 0px;
@@ -30,7 +30,7 @@
   body, html {
     padding: 3px 3px 3px 3px;
 
-    background-color: #D8DBE2;
+    background-color: ##FBFAF5;
 
     font-family: Verdana, sans-serif;
     font-size: 11pt;
@@ -39,7 +39,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>The Beginning of Another Website</title>
+    <title>School Directory</title>
     <style type="text/css" media="screen">
   * {
     margin: 0px 0px 0px 0px;
@@ -49,7 +49,7 @@
   body, html {
     padding: 3px 3px 3px 3px;
 
-    background-color: #D8DBE2;
+    background-color: #FBFAF5;
 
     font-family: Verdana, sans-serif;
     font-size: 11pt;
@@ -258,7 +258,7 @@
         <div class="content_section_text">
           <p>
             
-	</p>
+          </p>
 
 
         </div>
@@ -269,12 +269,23 @@
           <h2 style="font-style:bold;text-align:center;" > Martial Arts School Directory </h2>
           <p>
                Here you will find a list of schools and teachers, recommended by myself or trusted peers.
-               The list is by no means exhaustive and will (hopefully) be updated as frequently as time allows.
-               Below this list you will also find other websites that I recommend for more knowledge acquisition.
+               The list is by no means exhaustive and will (hopefully) be updated as frequently as time allows. My hope is to have a school directory divided up by state (US) or country.
+               Then hopefully eventually have current contact information for those schools.
+               Below this list you will also eventually find other websites that I recommend for more knowledge acquisition.
+               <br></br>
+               It is worth mentioning that most of the schools listed will be slanted towards Chinese martial arts with some exceptions.
+               With that being said, any instructor or school which represents martial arts in the best way they can is liable to be listed.
+               <br></br>
                <br></br>
           </p>
           <p>
-            
+            <a href="https://iliqchuan.com/"</a> I Liq Chuan(US & International)
+            <br></br>
+            <a href="https://9dragonskungfu.com/"</a> 9 Dragons Kung Fu(US, AZ)
+            <br></br>
+            <a href="https://www.fallingleaveskungfu.com/"</a> Falling Leaves Kung Fu(US, AZ)
+            <br><br>
+            <a href="https://sinclairinternalarts.com/"</a> Sinclair Internal Arts(Canada & International)
           </p>
           <pre>
 
@@ -345,3 +356,4 @@
     </div>
   </body>
 </html>
+
