--- a/school-directory.html
+++ b/school-directory.html
@@ -280,15 +280,15 @@
           </p>
           
           
-              <a href="https://iliqchuan.com/"</a>I Liq Chuan(US/International)
+              <a href="https://iliqchuan.com/" target="_blank" rel="noopener noreferrer">I Liq Chuan(US/International)
             <br><br>
-              <a href="https://9dragonskungfu.com/"</a>9 Dragons Kung Fu(US, AZ)
+              <a href="https://9dragonskungfu.com/" target="_blank" rel="noopener noreferrer">9 Dragons Kung Fu(US, AZ)
             <br><br>
-              <a href="https://www.fallingleaveskungfu.com/"</a>Falling Leaves Kung Fu(US, AZ)
+              <a href="https://www.fallingleaveskungfu.com/" target="_blank" rel="noopener noreferrer">Falling Leaves Kung Fu(US, AZ)
             <br><br>
-              <a href="https://sinclairinternalarts.com/"</a>Sinclair Internal Arts(Canada/International)
+              <a href="https://sinclairinternalarts.com/" target="_blank" rel="noopener noreferrer">Sinclair Internal Arts(Canada/International)
             <br><br>
-              <a href="https://www.balintawakphoenix.com/">Balintawak Phoenix(US, AZ)</a>
+              <a href="https://www.balintawakphoenix.com/" target="_blank" rel="noopener noreferrer">Balintawak Phoenix(US, AZ)</a>
           <br>
           <br>
           <br>
